Wed Mar 22 16:18:00 UTC 2006  Simon Massey  <sma@prismtech.com>

        * tests/Bug_1495_Regression/run_test.pl:
          Altered IOR file wait timing to platform constant.

Wed Mar 22 16:05:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/PortableGroup/PG_Object_Group.cpp:
          Also disable a warning for BDS2006 with Update Pack 2

Wed Mar 22 15:47:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2417_Regression/run_test.pl:
          Updated to run with VxWorks

Wed Mar 22 14:40:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Trader/Trader_Interfaces.cpp:
        * orbsvcs/orbsvcs/Notify/ProxySupplier_T.cpp:
        * tao/AnyTypeCode/Union_TypeCode.cpp:
          Fixed no return statement in function warning

Wed Mar 22 14:35:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/GIOP_Message_Base.cpp:
          Fixed "control reaches end of non-void function" warning

Tue Mar 21 13:01:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB_Table.h:
          Removed update_orbs method declaration, there was no implementation,
          if someone would use this method he would get an unresolved external,
          so zapped it

Tue Mar 21 13:00:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Profile.h:
        * tao/LocalObject.h:
        * tao/IIOP_Acceptor.h:
        * tao/IIOP_Acceptor.h:
          Documentation and layout fixes

Mon Mar 20 13:31:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/IIOP_Acceptor.cpp:
          Use prefix decrement instead of postfix

Mon Mar 20 13:23:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/GIOP_Message_Base.cpp:
          Made more local variables const, initialize pointer to 0

        * tao/GIOP_Message_Base.h:
          Documentation fix

Mon Mar 20 13:13:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
