@@ -1,3 +1,12 @@
+Fri Mar 24 01:58:02 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>
+
+        * orbsvcs/Notify_Service/Notify_Service.cpp:
+        * orbsvcs/tests/Notify/lib/Driver.cpp:
+        
+          Removed logging of ORB worker thread start up, as that fails on
+          systems without thread priorities.  See bugzilla issue 2477 for
+          details.
+
 Wed Mar 22 16:18:00 UTC 2006  Simon Massey  <sma@prismtech.com>
 
         * tests/Bug_1495_Regression/run_test.pl:
